# vena

./: .gitignore  Cargo.toml  EVAL.md  LICENSE  Makefile  README.md  VERIFICATION.md  schema.sql
.github/workflows/: bundle.yml  codeql.yml  coverage.yml  release-pr.yml  release.yml  test.yml
crates/vena-app/: Cargo.toml  build.rs  tauri.conf.json
crates/vena-app/capabilities/: default.json
crates/vena-app/src/: api.rs  gguf.rs  images.rs  keystore.rs  lib.rs  local_llm.rs  local_paint.rs  net.rs  tauri_shell.rs  tests.rs
crates/vena-app/tests/: api_surface.rs  commands.rs  dispatch_parity.rs  download.rs  import_flows.rs  relay.rs  relay_e2e.rs
crates/vena-core/: Cargo.toml
crates/vena-core/src/: engine.rs  error.rs  graph.rs  hash.rs  inference.rs  lib.rs  model.rs  pkg.rs  store.rs  tests.rs  util.rs  verify.rs  wiki.rs
crates/vena-core/tests/: inference_http.rs
crates/vena-eval/: Cargo.toml
crates/vena-eval/src/: main.rs
crates/vena-forge/: Cargo.toml
crates/vena-forge/src/: forge.rs  import.rs  ledger.rs  lib.rs  main.rs
crates/vena-forge/tests/: roundtrip.rs  streaming.rs
data/books/: dracula.ledger.json
data/eval/: dracula.jsonl
docs/: system-design.md
docs/design/: Vena App.dc.html  Vena Mobile.dc.html
scripts/: bump-version.py  eval-report.py  eval-tiers.sh  fetch-nemo.sh  forge-classics.sh  serve-local.sh
ui/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
ui-dc/: build.mjs  dc-shims.js  desktop.html  image-slot.js  index.html  ios-frame.jsx  mobile.html  patch-desktop.js  patch-mobile.js  vena-bridge.js
ui-dc/fonts/: fonts.css
ui/src/: App.tsx  api.ts  main.tsx  store.tsx  theme.css
ui/src/components/: common.tsx
ui/src/screens/: Archive.tsx  Companion.tsx  Library.tsx  Onboarding.tsx  Reader.tsx  Settings.tsx  Store.tsx
