[package]
name = "vena-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Vena Tauri 2 shell: typed IPC commands, events, state. The command LOGIC lives in the lib (no Tauri dep, fully testable); the `vena` bin is the thin Tauri wrapper."

[lib]
name = "vena_app"
path = "src/lib.rs"

# The Tauri desktop/mobile binary. Skipped by a plain `cargo build`/`test` (needs
# webkit2gtk etc.); built on a dev machine with `--features tauri`.
[[bin]]
name = "vena"
path = "src/bin/vena.rs"
required-features = ["tauri"]

[features]
default = []
tauri = ["dep:tauri", "dep:tauri-plugin-dialog", "dep:tauri-plugin-notification", "dep:keyring"]

[dependencies]
vena-core = { path = "../vena-core" }
vena-forge = { path = "../vena-forge" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }

# Tauri-only (optional; enabled by the `tauri` feature).
tauri = { version = "2", features = [], optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
tauri-plugin-notification = { version = "2", optional = true }
keyring = { version = "3", optional = true }

[build-dependencies]
tauri-build = { version = "2", optional = true }

[dev-dependencies]
tempfile = "3"
