[package]
name = "vena-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Vena engine: knowledge ledger, store, and the 5-stage spoiler-resistance pipeline."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
